--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -5,5 +5,5 @@
         {% endfor %}
     </ul>
 {% else %}
-    <p>No questions are available.</p>
+    <p>No polls are available.</p>
 {% endif %}
